[gd_scene load_steps=3 format=2]

[ext_resource path="res://Level/Scripts/WavePhase.gd" type="Script" id=1]
[ext_resource path="res://Enemies/SpawnGroups/RightByters.tscn" type="PackedScene" id=2]

[node name="WavePhase" type="Node2D"]
script = ExtResource( 1 )
auto_start = true
spawn_groups = [ ExtResource( 2 ) ]
spawn_points = [ NodePath("SpawnPoints") ]
spawn_delays = [ 1.0 ]

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="top_left" type="Node2D" parent="SpawnPoints"]
position = Vector2( 2390.4, -300 )

[node name="top_right" type="Node2D" parent="SpawnPoints"]
position = Vector2( 3340.8, -300 )

[node name="left_upper" type="Node2D" parent="SpawnPoints"]
position = Vector2( 1340, 810 )

[node name="left_lower" type="Node2D" parent="SpawnPoints"]
position = Vector2( 1340, 1620 )

[node name="right_upper" type="Node2D" parent="SpawnPoints"]
position = Vector2( 4420, 810 )

[node name="right_lower" type="Node2D" parent="SpawnPoints"]
position = Vector2( 4420, 1620 )

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
